attempt to fix nav not showing on phones

--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -303,6 +303,6 @@ section {
     margin-top: 40px;
   }
   nav {
-    display: none;
+    display: block;
   }
 }
